--- a/frontend/views/bacon.edge
+++ b/frontend/views/bacon.edge
@@ -1,8 +1,10 @@
-@layout('layouts/main')
+@layout('layouts/bacon')
 @set('title', 'Bacon factory')
 
 @section('body')
-  @!component('snowdog/bacon', {
-    img: '/images/bacon.jpg'
-  })
+  <div class="bacon">
+      @!component('snowdog/bacon', {
+        img: '/images/bacon.jpg'
+      })
+  </div>
 @end
