--- a/frontend/views/layouts/main.edge
+++ b/frontend/views/layouts/main.edge
@@ -6,6 +6,7 @@
     <title>{{ title }}</title>
     @entryPointStyles('app')
     @entryPointScripts('app')
+    @!section('script')
   </head>
   <body>
     <main>
